# ontology-extractor

./: .env  .env.example  GEMINI.md  LICENSE  NotMCP.md  README.md  pyproject.toml  sample.txt  sample_call_center.txt
docs/fastapi_webservice/: implementation_plan.md  task.md  walkthrough.md
docs/knowledge_graph_extraction/: implementation_plan.md  task.md  walkthrough.md
docs/knowledge_graph_rag/: implementation_plan.md  task.md  walkthrough.md
docs/ontology_cli_development/: implementation_plan.md  task.md  walkthrough.md
docs/ontology_extraction_refactoring/: implementation_plan.md  task.md  walkthrough.md
neo4j/: Dockerfile
src/ontology_extractor/: __init__.py  api.py  config.py  main.py  memory.py  neo4j_client.py
